RAIN-5344 : DSS: OBPS data truncating issue fix in case of no data

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/components/charts.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/components/charts.scss
@@ -73,8 +73,9 @@
   }
 }
 .no-data {
-  @apply flex justify-center items-center h-full;
-  margin-bottom: 30px;
+  @apply flex justify-center items-center;
+  height: 90%;
+  margin-bottom: 40px;
 }
 
 @screen dt {
